Allow defining custom metaData for filter objects
