# docs/api/openapi.yml
@@ -1413,6 +1413,11 @@ paths:
                   description: Partial match of a forward email address or URL
                   schema:
                       type: string
+                - name: metaData
+                  in: query
+                  description: 'If true, then includes metaData in the response'
+                  schema:
+                      type: boolean
                 - name: limit
                   in: query
                   description: How many records to return
@@ -1447,6 +1452,12 @@ paths:
                 - Filters
             summary: List Filters for a User
             operationId: getFilters
+            parameters:
+                - name: metaData
+                  in: query
+                  description: 'If true, then includes metaData in the response'
+                  schema:
+                      type: boolean
             responses:
                 '200':
                     description: Success
@@ -4781,6 +4792,9 @@ components:
                 disabled:
                     type: boolean
                     description: 'If true, then this filter is ignored'
+                metaData:
+                    type: object
+                    description: Custom metadata value
         UpdateFilterResponse:
             required:
                 - success
@@ -4934,7 +4948,6 @@ components:
                 - flagged
                 - draft
                 - contentType
-                - metaData
             type: object
             properties:
                 success:
@@ -5842,6 +5855,11 @@ components:
                 disabled:
                     type: boolean
                     description: If true then this filter is ignored
+                metaData:
+                    description: 'Optional metadata, must be an object or JSON formatted string'
+                    oneOf:
+                        - type: object
+                        - type: string
         CreateFilterRequest:
             required:
                 - query
@@ -5858,6 +5876,11 @@ components:
                 disabled:
                     type: boolean
                     description: If true then this filter is ignored
+                metaData:
+                    description: 'Optional metadata, must be an object or JSON formatted string'
+                    oneOf:
+                        - type: object
+                        - type: string
         UpdateMailboxRequest:
             type: object
             properties:
@@ -6714,6 +6737,9 @@ components:
                 disabled:
                     type: boolean
                     description: 'If true, then this filter is ignored'
+                metaData:
+                    type: object
+                    description: Custom metadata value. Included if metaData query argument was true
                 targets:
                     type: array
                     items:
@@ -6752,6 +6778,9 @@ components:
                         type: array
                         items:
                             type: string
+                metaData:
+                    type: object
+                    description: Custom metadata value. Included if metaData query argument was true
                 disabled:
                     type: boolean
                     description: 'If true, then this filter is ignored'
