# lib/api/filters.js
@@ -7,7 +7,7 @@ const MongoPaging = require('mongo-cursor-pagination');
 const urllib = require('url');
 const tools = require('../tools');
 const roles = require('../roles');
-const { nextPageCursorSchema, previousPageCursorSchema, pageNrSchema, sessSchema, sessIPSchema, booleanSchema } = require('../schemas');
+const { nextPageCursorSchema, previousPageCursorSchema, pageNrSchema, sessSchema, sessIPSchema, booleanSchema, metaDataSchema } = require('../schemas');
 const { publish, FILTER_DELETED, FILTER_CREATED, FORWARD_ADDED } = require('../events');
 
 module.exports = (db, server, userHandler, settingsHandler) => {
@@ -18,6 +18,7 @@ module.exports = (db, server, userHandler, settingsHandler) => {
 
             const schema = Joi.object().keys({
                 forward: Joi.string().trim().empty('').max(255),
+                metaData: booleanSchema,
                 limit: Joi.number().default(20).min(1).max(250),
                 next: nextPageCursorSchema,
                 previous: previousPageCursorSchema,
@@ -60,6 +61,8 @@ module.exports = (db, server, userHandler, settingsHandler) => {
             let page = result.value.page;
             let pageNext = result.value.next;
             let pagePrevious = result.value.previous;
+
+            let includeMetaData = result.value.metaData;
 
             let filter = {};
 
@@ -146,7 +149,7 @@ module.exports = (db, server, userHandler, settingsHandler) => {
                 results: (listing.results || []).map(filterData => {
                     let descriptions = getFilterStrings(filterData, mailboxes);
 
-                    return {
+                    let values = {
                         id: filterData._id.toString(),
                         user: filterData.user.toString(),
                         name: filterData.name,
@@ -156,6 +159,12 @@ module.exports = (db, server, userHandler, settingsHandler) => {
                         created: filterData.created,
                         targets: filterData.action && filterData.action.targets && filterData.action.targets.map(t => t.value)
                     };
+
+                    if (includeMetaData && filterData.metaData) {
+                        values.metaData = tools.formatMetaData(filterData.metaData);
+                    }
+
+                    return permission.filter(values);
                 })
             };
 
@@ -170,6 +179,7 @@ module.exports = (db, server, userHandler, settingsHandler) => {
 
             const schema = Joi.object().keys({
                 user: Joi.string().hex().lowercase().length(24).required(),
+                metaData: booleanSchema,
                 sess: sessSchema,
                 ip: sessIPSchema
             });
@@ -188,14 +198,17 @@ module.exports = (db, server, userHandler, settingsHandler) => {
                 });
             }
 
-            // permissions check
+            let permission;
             if (req.user && req.user === result.value.user) {
-                req.validate(roles.can(req.role).readOwn('filters'));
+                permission = roles.can(req.role).readOwn('filters');
             } else {
-                req.validate(roles.can(req.role).readAny('filters'));
+                permission = roles.can(req.role).readAny('filters');
             }
+            req.validate(permission);
 
             let user = new ObjectId(result.value.user);
+
+            let includeMetaData = result.value.metaData;
 
             let userData;
             try {
@@ -284,7 +297,7 @@ module.exports = (db, server, userHandler, settingsHandler) => {
                 results: filters.map(filterData => {
                     let descriptions = getFilterStrings(filterData, mailboxes);
 
-                    return {
+                    const values = {
                         id: filterData._id.toString(),
                         name: filterData.name,
                         query: descriptions.query,
@@ -292,6 +305,12 @@ module.exports = (db, server, userHandler, settingsHandler) => {
                         disabled: !!filterData.disabled,
                         created: filterData.created
                     };
+
+                    if (includeMetaData && filterData.metaData) {
+                        values.metaData = tools.formatMetaData(filterData.metaData);
+                    }
+
+                    return permission.filter(values);
                 })
             });
         })
@@ -324,11 +343,13 @@ module.exports = (db, server, userHandler, settingsHandler) => {
             }
 
             // permissions check
+            let permission;
             if (req.user && req.user === result.value.user) {
-                req.validate(roles.can(req.role).readOwn('filters'));
+                permission = roles.can(req.role).readOwn('filters');
             } else {
-                req.validate(roles.can(req.role).readAny('filters'));
+                permission = roles.can(req.role).readAny('filters');
             }
+            req.validate(permission);
 
             let user = new ObjectId(result.value.user);
             let filter = new ObjectId(result.value.filter);
@@ -384,7 +405,8 @@ module.exports = (db, server, userHandler, settingsHandler) => {
                 query: {},
                 action: {},
                 disabled: !!filterData.disabled,
-                created: filterData.created
+                created: filterData.created,
+                _filterData: filterData
             };
 
             Object.keys((filterData.query && filterData.query.headers) || {}).forEach(key => {
@@ -405,7 +427,11 @@ module.exports = (db, server, userHandler, settingsHandler) => {
                 response.action[key] = filterData.action[key];
             });
 
-            return res.json(response);
+            if (filterData.metaData) {
+                response.metaData = tools.formatMetaData(filterData.metaData);
+            }
+
+            return res.json(permission.filter(response));
         })
     );
 
@@ -523,6 +549,8 @@ module.exports = (db, server, userHandler, settingsHandler) => {
 
                 disabled: booleanSchema.default(false),
 
+                metaData: metaDataSchema.label('metaData'),
+
                 sess: sessSchema,
                 ip: sessIPSchema
             });
@@ -608,6 +636,10 @@ module.exports = (db, server, userHandler, settingsHandler) => {
 
             if (values.name) {
                 filterData.name = values.name;
+            }
+
+            if (values.metaData) {
+                filterData.metaData = values.metaData;
             }
 
             ['from', 'to', 'subject', 'listId'].forEach(key => {
@@ -792,6 +824,8 @@ module.exports = (db, server, userHandler, settingsHandler) => {
 
                 disabled: booleanSchema,
 
+                metaData: metaDataSchema.label('metaData'),
+
                 sess: sessSchema,
                 ip: sessIPSchema
             });
@@ -834,6 +868,11 @@ module.exports = (db, server, userHandler, settingsHandler) => {
 
             if (typeof values.disabled === 'boolean') {
                 $set.disabled = values.disabled;
+                hasChanges = true;
+            }
+
+            if (values.metaData) {
+                $set.metaData = values.metaData;
                 hasChanges = true;
             }
 
